Test/git-issues-3430/git-issue-3430q.dfy.expect
git-issue-3430q.dfy(6,0): Error: Expected a module name here
1 parse errors detected in git-issue-3430q.dfy
